# Kalbukas

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
assets/: icon.icns
dictation/: __init__.py  app.py  audio.py  bootstrap.py  config.py  enhancer.py  history.py  hotkey.py  logsetup.py  netlock.py  textclean.py  transcriber.py  updates.py
dictation/ui/: __init__.py  download_dialog.py  history_window.py  overlay.py  review_dialog.py  settings_window.py  shortcut_dialog.py  tray.py
packaging/: Kalbukas.spec  installer.iss  make_dmg.sh  make_icons.py
